tests/profile/error/keybinding/wrongtype_name.profile
{
  "version": { "major": 1, "minor": 0 },
  "keybindings": [
    {
      "key": "T",
      "documentation": "T documentation",
      "name": 1.0,
      "gui_path": "T Gui-Path",
      "is_local": true,
      "script": "T script"
    }
  ]
}
